Fix a scroll overflow issue in the edit video modal

--- a/assets/scss/components/_video-page.scss
+++ b/assets/scss/components/_video-page.scss
@@ -30,6 +30,7 @@
     &.edit-view{
         width: calc(100% - 20px);
         border-right: none;
+        height: auto;
     }
     .video-edit{
         max-width: 721px;
